force-clientforce/main/default/objects/C360_Logs__c/C360_Logs__c.object-meta.xml
<CustomObject>
    <label>C360_Logs</label>
    <nameField>
        <displayFormat>CL-{0000000000}</displayFormat>
        <label>C360_Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C360_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>