force-clientforce/main/default/objects/C360_Logs__c/fields/DreamId__c.field-meta.xml
<CustomField>
    <fullName>DreamId__c</fullName>
    <label>DreamId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>