force-clientforce/main/default/objects/C360_Logs__c/fields/SalesForceId__c.field-meta.xml
<CustomField>
    <fullName>SalesForceId__c</fullName>
    <label>SalesForceId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>