force-clientforce/main/default/objects/C360_Logs__c/fields/TR_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>TR_Apex_Class__c</fullName>
    <label>Apex Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TR_C360_IntegrationManager_Utils</fullName>
            </value>
            <value>
                <fullName>apex_class_TEST</fullName>
            </value>
            <value>
                <fullName>TR_IntegrationManagerHandler</fullName>
            </value>
            <value>
                <fullName>TECH_C360_Integration</fullName>
            </value>
            <value>
                <fullName>CF_WS_C360SyncClientCreationUpdate</fullName>
                <isActive>false</isActive>
                <label>CF_WS_C360SyncClientCreationUpdate</label>
            </value>
            <value>
                <fullName>TR_BtoC_IntegrationManager_Utils</fullName>
                <isActive>false</isActive>
                <label>TR_BtoC_IntegrationManager_Utils</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>