force-clientforce/main/default/objects/C360_Logs__c/fields/TR_APEX_Limits__c.field-meta.xml
<CustomField>
    <fullName>TR_APEX_Limits__c</fullName>
    <label>APEX Limits</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>