force-clientforce/main/default/objects/C360_Logs__c/fields/TR_Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>TR_Apex_Method__c</fullName>
    <label>Apex Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>