force-clientforce/main/default/objects/C360_Logs__c/fields/TR_Application__c.field-meta.xml
<CustomField>
    <fullName>TR_Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C360</fullName>
            </value>
            <value>
                <fullName>C360_EVENT_LOG</fullName>
            </value>
            <value>
                <fullName>BtoC_EVENT_LOG</fullName>
                <isActive>false</isActive>
                <label>BtoC_EVENT_LOG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>