force-clientforce/main/default/objects/C360_Logs__c/fields/TR_Duration__c.field-meta.xml
<CustomField>
    <fullName>TR_Duration__c</fullName>
    <label>Duration</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>