force-clientforce/main/default/objects/C360_Logs__c/fields/TR_Error__c.field-meta.xml
<CustomField>
    <fullName>TR_Error__c</fullName>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>