force-clientforce/main/default/objects/C360_Logs__c/fields/TR_EventUuidLog__c.field-meta.xml
<CustomField>
    <fullName>TR_EventUuidLog__c</fullName>
    <externalId>true</externalId>
    <label>EventUuidLog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>