force-clientforce/main/default/objects/C360_Logs__c/fields/TR_Has_Error__c.field-meta.xml
<CustomField>
    <fullName>TR_Has_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Error</label>
    <type>Checkbox</type>
</CustomField>