force-clientforce/main/default/objects/C360_Logs__c/fields/TR_JSON__c.field-meta.xml
<CustomField>
    <fullName>TR_JSON__c</fullName>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>