force-clientforce/main/default/objects/C360_Logs__c/fields/TR_Level__c.field-meta.xml
<CustomField>
    <fullName>TR_Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>