force-clientforce/main/default/objects/C360_Logs__c/fields/TR_Message__c.field-meta.xml
<CustomField>
    <fullName>TR_Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>