force-clientforce/main/default/objects/C360_Logs__c/fields/TR_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>TR_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>