force-clientforce/main/default/objects/C360_Logs__c/fields/TR_Type__c.field-meta.xml
<CustomField>
    <fullName>TR_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incoming_flow</fullName>
            </value>
            <value>
                <fullName>Outgoing_flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>